linux/k8s/imux/base/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-imux
spec:
  controllerName: io.cilium/gateway-controller
