linux/k8s/imux/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: imux-httproute
spec:
  parentRefs:
  - name: imux-gateway
  hostnames:
  - imux.demo.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: imux-service
      port: 80
